# src/lib/api/model/index.ts
@@ -18,6 +18,7 @@ export * from "./authControllerRefreshTokens200";
 export * from "./authControllerRefreshTokens200User";
 export * from "./authControllerRefreshTokens200UserLocale";
 export * from "./bulkReorderStagesDto";
+export * from "./changePasswordDto";
 export * from "./consumeRecoveryDto";
 export * from "./conversationsControllerGetConversationsFilter";
 export * from "./conversationsControllerGetConversationsParams";
@@ -65,7 +66,9 @@ export * from "./notificationsControllerGetNotificationsParams";
 export * from "./notificationsControllerMarkAllAsRead200";
 export * from "./notificationsControllerMarkOneAsRead200";
 export * from "./organizationsControllerCreateOrganization201";
+export * from "./passwordChangedDto";
 export * from "./pipelineStagesControllerFindAll200Item";
+export * from "./profileMembershipDto";
 export * from "./recentActivityDto";
 export * from "./refreshDto";
 export * from "./reorderStageItemDto";
@@ -83,8 +86,11 @@ export * from "./updateLeadStageDtoStatus";
 export * from "./updateLocaleDto";
 export * from "./updatePipelineStageDto";
 export * from "./updatePipelineStageDtoMappedStatus";
+export * from "./updateUserProfileDto";
 export * from "./uploadDocumentDto";
 export * from "./upsertAiPersonaDto";
 export * from "./upsertAiPersonaDtoBusinessRules";
 export * from "./userLocale";
+export * from "./userProfileDto";
+export * from "./userProfileDtoLocale";
 export * from "./webhooksControllerVerifyWebhookParams";
